Fix scrollbar color in dark mode

--- a/css/new.css
+++ b/css/new.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
-html,
 body {
   margin: 0;
   width: 100%;
